force-app/main/default/objects/Personal_Details__c/Personal_Details__c.object-meta.xml
<CustomObject>
    <label>Personal Details</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Applicant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>