force-app/main/default/objects/Personal_Details__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Communication email</description>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>