force-app/main/default/objects/Personal_Details__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Applicant first name</description>
    <label>First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>