force-app/main/default/objects/Personal_Details__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Primary contact</description>
    <label>Mobile Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>